# global-exchange

./: .dockerignore  .env  .env.prod  .gitignore  Dockerfile  Dockerfile.prod  README.md  TODO_SEGMENTOS.md  chatIA_g7.txt  check_env.py  db_check.py  docker-compose-dev.yml  docker-compose.prod.yml  docker-compose.yml  dockerfile  dockerfile.prod  find_old_vars.py  makefile  manage.py  matriz_permisos.txt  migrate_decorators.py  permisos.txt  pyproject.toml  requirements.txt  ver_grupos.py
asociar_clientes_usuarios/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
autenticacion/: models.py  utils.py  views.py
banco/: admin.py  forms.py  models.py  urls.py  views.py
billetera/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
casa_de_cambios/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
clientes/: apps.py  decorators.py  forms.py  forms_old.py  middleware.py  models.py  services.py  signals.py  tests.py  tests_medios_acreditacion.py  urls.py  utils.py  views.py
divisas/: admin.py  apps.py  forms.py  models.py  services.py  signals.py  tests.py  urls.py  views.py
interfaz/: forms.py  models.py  tests.py  urls.py  views.py
medios_pago/: admin.py  apps.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
mfa/: models.py  tests.py  urls.py  utils.py  views.py
nginx/: nginx.conf
notificaciones/: context_processors.py  forms.py  models.py  services.py  urls.py  views.py
nueva_app/: models.py  tests.py  urls.py  views.py
operacion_divisas/: apps.py  forms.py  urls.py  views.py
roles/: decorators.py  (+9 more)
(+340 files in other folders)
